add: финалим бредик
