# backend/internal/handler/card/api/api.go
@@ -1,6 +1,8 @@
 package api
 
 import (
+	"cashback_info/internal/model/card"
+
 	"github.com/google/uuid"
 )
 
@@ -11,4 +13,9 @@ type CreateCardRequest struct {
 
 type CreateCardResponse struct {
 	CardID uuid.UUID `json:"card_id" binding:"required"`
+}
+
+type ListCardsResponse struct {
+	UserCards   []card.Card `json:"user_cards" binding:"required"`
+	FamilyCards []card.Card `json:"family_cards" binding:"required"`
 }
